<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map3d="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/top_bar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/feature_title_camera_controls"
        app:titleTextColor="?attr/colorOnPrimary"
        android:fitsSystemWindows="true"
        />

    <com.google.android.gms.maps3d.Map3DView
        android:id="@+id/map3dView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/camera_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        map3d:centerAlt="175"
        map3d:centerLat="40.748392"
        map3d:centerLng="-73.986060"
        map3d:heading="26"
        map3d:maxAltitude="1000000"
        map3d:maxHeading="360"
        map3d:maxTilt="90"
        map3d:minAltitude="0"
        map3d:minHeading="0"
        map3d:minTilt="0"
        map3d:mode="satellite"
        map3d:range="4000"
        map3d:roll="0"
        map3d:tilt="67" />

    <androidx.cardview.widget.CardView
        android:id="@+id/camera_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map3dView">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fly_to"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fly_to"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fly_around"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:text="@string/fly_around"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/show_restriction"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/camera_show_restriction"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/toggle_restriction"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:checkable="true"
                    android:checked="false"
                    android:text="@string/camera_activate_restriction"
                    android:textAppearance="@style/TextAppearance.Material3.BodySmall" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/map_mode_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginHorizontal="16dp"
                >

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/map_mode_hybrid"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/map_mode_hybrid"
                    />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/map_mode_satellite"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_marginStart="8dp"
                    android:text="@string/map_mode_satellite"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/roll_slider_label"
                style="@style/TextAppearance.Material3.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/camera_roll_label" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <com.google.android.material.slider.Slider
                    android:id="@+id/roll_slider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:valueFrom="-360.0"
                    android:valueTo="360.0"
                    android:value="0.0"
                    android:stepSize="1.0"
                    app:labelBehavior="gone" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/reset_roll_button"
                    style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:icon="@drawable/outline_recenter_24"
                android:contentDescription="@string/reset_roll_content_description" />

            </LinearLayout>

            <TextView
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_state_label" />

            <TextView
                android:id="@+id/camera_state_text"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
